demo-itst/apps/pvc/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-setup
  labels:
    app: data-setup
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  to:
    kind: Service
    name: data-setup
    weight: 100
  port:
    targetPort: 8090-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
